# ttt

./: .gitignore  package.json  svelte.config.js  vite.config.ts
.github/workflows/: release.yaml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src/routes/: +layout.ts  +page.svelte
